# Run_Local_AI_Model

./: Load_AI_Model_gguf.py  README.md  llama_bridge.py
Linux_scripts/: run_local_AI_model.sh
Powershell_script/: Run_AI_memory.ps1
cpp/: CMakeLists.txt  main.cpp
